src/theme/base/_utilities.scss
.u-center-text { text-align: center !important; }


.u-margin-bottom-none { margin-bottom: 0rem !important; }
.u-margin-bottom-small { margin-bottom: 1.5rem !important; }
.u-margin-bottom-medium {
    margin-bottom: 4rem !important;

    @include respond(tab-port) {
        margin-bottom: 3rem !important;
    }
}

.u-margin-bottom-big {
    margin-bottom: 8rem !important;

    @include respond(tab-port) {
        margin-bottom: 5rem !important;
    }
}

.u-margin-bottom-huge {
  margin-bottom: 10rem !important;

  @include respond(tab-port) {
    margin-bottom: 6.5rem !important;
  }
}


.u-margin-top-big { margin-top: 8rem !important; }
.u-margin-top-huge { margin-top: 10rem !important; }

.flex { display: flex; }
.align-center { align-items: center; }
.justify-center { justify-content: center; }
.flex-gap-sm { gap: 1rem; }

.color-white { color: $color-white !important; }

.separate-section {
  background-color: $color-grey-light-1;
  padding: 25rem 0 10rem 0;
  margin-top: -20vh;

  @include respond(tab-port) {
      padding: 20rem 0;
  }
}

